group 'org.learn.gradle'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

//test {
//    testLogging {
//        events "passed", "skipped", "failed", "standardOut", "standardError"
//    }
//
//    useJUnit {
//        includeCategories 'org.learn.gradle.CategoryA'
//        excludeCategories 'org.learn.gradle.CategoryB'
//    }
//}

test {

    // set a system property for the test JVM(s)
    systemProperty 'some.prop', 'value'

    // show standard out and standard error of the test JVM(s) on the console
    testLogging.showStandardStreams = true

    // set heap size for the test JVM(s)
    minHeapSize = "128m"
    maxHeapSize = "512m"

    // set JVM arguments for the test JVM(s)
    jvmArgs '-XX:MaxPermSize=256m'

    // listen to events in the test execution lifecycle
    beforeTest {
        descriptor -> logger.lifecycle("Running test: " + descriptor)
    }
}
